atualização de cadastro de profuto com variação completo